split up page into subpages

--- a/index.html
+++ b/index.html
@@ -1,335 +1,42 @@
-<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Arnav Kumar</title>
-        <link rel="stylesheet" href="./assets/style.css" />
-      </head>
-  <body>
-    <header>
-      <hgroup>
-        
-        <h1 id="title">Arnav Kumar</h1>
-      </hgroup>
-            <p><a href="https://github.com/arnavcs">[Github]</a> <a
-href="https://arnavcs.itch.io/">[itch.io]</a> <a
-href="./resume-cv/resume.pdf">[resume]</a> <a
-href="./resume-cv/cv.pdf">[CV]</a></p>
-          </header>
-    <hr class="lynx" />
-    <section id="site-introduction" class="episode">
-    <h1>Site Introduction</h1>
-    <ul>
-    <li>This site is best viewed through a computer, and wasn’t designed
-    for mobile use.</li>
-    <li>Links in (square|round) brackets are to content I (did|didn’t)
-    create, respectively.</li>
-    <li>This website does not have a sitemap; everything is accesible
-    from this homepage.</li>
-    </ul>
-    </section>
-    <section id="projects" class="episode">
-    <h1>Projects</h1>
-    <h2
-    id="bloom-itch.io-github-may-2024---jun-2024"><strong>Bloom</strong>
-    <a href="https://kdxiao.itch.io/bloom">[itch.io]</a> <a
-    href="https://github.com/kdxiao/bloom">[Github]</a> <span
-    class="right">May 2024 - Jun 2024</span></h2>
-    <ul>
-    <li>A submission made in 72 hours with Godot for a game jam; you are
-    a bee that pollinates flowers in a field to plant new hybrids</li>
-    <li>Implemented colour mixing, screen wrapping, movement, and flower
-    spawning mechanics</li>
-    </ul>
-    <h2
-    id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
-    File Explorer</strong> <a href="https://ipfe.elguindi.xyz/">[try
-    it]</a> <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
-    <a href="https://devpost.com/software/changeme">[Devpost]</a> <span
-    class="right">Jan 2023</span></h2>
-    <ul>
-    <li>A visual file explorer of an IPFS written in Golang, Python, and
-    JavaScript that uses one of Cohere’s NLP models to summarize and
-    categorize files based on metadata, and Estuary’s API to fetch the
-    files from the IPFS</li>
-    </ul>
-    <h2
-    id="prognosing-ipf-cwsf-paper-dec-2020---jun-2021"><strong>Prognosing
-    IPF</strong> <a href="./projects/osic-cwsf-paper.pdf">[CWSF
-    paper]</a> <span class="right">Dec 2020 - Jun 2021</span></h2>
-    <ul>
-    <li>Several machine learning models written to predict the
-    deterioration of the condition of the lungs over time for patients
-    of Idiopathic Pulmonary Fibrosis (IPF) and give a level of
-    confidence in the prediction</li>
-    </ul>
-    </section>
-    <section id="formal-education" class="episode">
-    <h1>Formal Education</h1>
-    <p>Italics means self-taught or audited. Course names are
-    abbreviated; hover for full course name.</p>
-    <h2
-    id="waterloo-undergraduate-degree-bachelors-of-computer-science"><strong>Waterloo
-    Undergraduate Degree</strong> : Bachelors of Computer Science</h2>
-    <table style="width:99%;">
-    <colgroup>
-    <col style="width: 1%" />
-    <col style="width: 15%" />
-    <col style="width: 12%" />
-    <col style="width: 18%" />
-    <col style="width: 14%" />
-    <col style="width: 15%" />
-    <col style="width: 12%" />
-    <col style="width: 8%" />
-    </colgroup>
-    <thead>
-    <tr class="header">
-    <th>Term</th>
-    <th colspan="7">Courses</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr class="odd">
-    <td>F ’22</td>
-    <td><span title="MATH 145 - Algebra (Advanced Level)">MATH
-    145</span></td>
-    <td><span title="MATH 147 - Calculus 1 (Advanced Level)">MATH
-    147</span></td>
-    <td><span
-    title="CS 145 - Designing Functional Programs (Advanced Level)">CS
-    145</span></td>
-    <td><span title="ENGL 109 - Introduction to Academic Writing">ENGL
-    109</span></td>
-    <td><span title="PHYS 121 - Mechanics">PHYS 121</span></td>
-    <td></td>
-    <td></td>
-    </tr>
-    <tr class="even">
-    <td>W ’23</td>
-    <td><span title="MATH 146 - Linear Algebra 1 (Advanced Level)">MATH
-    146</span></td>
-    <td><span title="MATH 148 - Calculus 2 (Advanced Level)">MATH
-    148</span></td>
-    <td><span
-    title="CS 146 - Elementary Algorithm Design and Data Abstraction (Advanced Level)">CS
-    146</span></td>
-    <td><span
-    title="CS 136L - Tools and Techniques for Software Development">CS
-    136L</span></td>
-    <td><span title="ENGL 108B - Global English Literatures">ENGL
-    108B</span></td>
-    <td><span title="PHYS 122 - Waves, Electricity and Magnetism">PHYS
-    122</span></td>
-    <td><span title="PD 1 - Career Fundamentals">PD 1</span></td>
-    </tr>
-    <tr class="odd">
-    <td>S ’23</td>
-    <td><span
-    title="COOP 1 - Blockchain Software Engineer at Dandelion Networks">COOP
-    1</span></td>
-    <td><span title="PD 11 - Processes for Technical Report Writing">PD
-    11</span></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-    <tr class="even">
-    <td>F ’23</td>
-    <td><span title="MATH 245 - Linear Algebra 2 (Advanced Level)">MATH
-    245</span></td>
-    <td><span title="MATH 247 - Calculus 3 (Advanced Level)">MATH
-    247</span></td>
-    <td><span title="STAT 240 - Probability (Advanced Level)">STAT
-    240</span></td>
-    <td><span title="CS 245E - Logic and Computation (Enriched)">CS
-    245E</span></td>
-    <td><span
-    title="CS 246E - Object-Oriented Software Development (Enriched)">CS
-    246E</span></td>
-    <td></td>
-    <td></td>
-    </tr>
-    <tr class="odd">
-    <td>W ’24</td>
-    <td><span
-    title="MATH 249 - Introduction to Combinatorics (Advanced Level)">MATH
-    249</span></td>
-    <td><span title="STAT 241 - Statistics (Advanced Level)">STAT
-    241</span></td>
-    <td><span
-    title="CO 255 - Introduction to Optimization (Advanced Level)">CO
-    255</span></td>
-    <td><span title="CS 240 - Data Structures and Data Management">CS
-    240</span></td>
-    <td><span title="CS 241 - Foundations of Sequential Programs">CS
-    241</span></td>
-    <td></td>
-    <td></td>
-    </tr>
-    <tr class="even">
-    <td>S ’24</td>
-    <td><span
-    title="COOP 2 - Research Assistantship under Professor Jane Gao">COOP
-    2</span></td>
-    <td><span
-    title="PD 10 - Professional Responsibility in Computing">PD
-    10</span></td>
-    <td><span title="CS 251 - Computer Organization and Design">CS
-    251</span></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    </tr>
-    <tr class="odd">
-    <td>F ’24</td>
-    <td><span title="CS 350 - Operating Systems">CS 350</span></td>
-    <td><span title="CS 341 - Algorithms">CS 341</span></td>
-    <td><span title="CS 370 - Numerical Computation">CS 370</span></td>
-    <td><span title="PHYS 256 - Geometrical and Physical Optics">PHYS
-    256</span></td>
-    <td><span title="FINE 100 - Studio Fundamentals">FINE
-    100</span></td>
-    <td></td>
-    <td></td>
-    </tr>
-    </tbody>
-    </table>
-    </section>
-    <section id="self-learning" class="episode">
-    <h1>Self-Learning</h1>
-    <p>I am still going through entries ending with &amp;.</p>
-    <h2 id="combinatorics"><strong>Combinatorics</strong></h2>
-    <ul>
-    <li><em>Combinatorics and Partially Ordered Sets: Dimension
-    Theory</em> by William T. Trotter &amp;</li>
-    </ul>
-    <h2 id="formal-logic-puzzles"><strong>Formal Logic &amp;
-    Puzzles</strong></h2>
-    <ul>
-    <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
-    </ul>
-    <h2 id="programming-theory"><strong>Programming Theory</strong></h2>
-    <ul>
-    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
-    href="./self-learning/concurrency-in-go/notes.pdf">[notes]</a></li>
-    <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
-    <a href="https://learnyouahaskell.com/">(book)</a></li>
-    </ul>
-    <h2 id="machine-learning-probability-statistics"><strong>Machine
-    Learning, Probability, &amp; Statistics</strong></h2>
-    <ul>
-    <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
-    <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
-    href="http://ciml.info/">(book)</a> &amp;</li>
-    </ul>
-    <h2 id="geometry-graphics"><strong>Geometry &amp;
-    Graphics</strong></h2>
-    <ul>
-    <li>University of Utah CS 4600 <a
-    href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
-    <a
-    href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
-    &amp;</li>
-    <li>Geometric Algebra Primer <a
-    href="http://www.jaapsuter.com/geometric-algebra/">(source)</a>
-    &amp;</li>
-    </ul>
-    </section>
-    <section id="presentations-lectures" class="episode">
-    <h1>Presentations &amp; Lectures</h1>
-    <h2
-    id="dimension-of-posets-and-random-graph-orders-university-of-waterloo-1st-aug-2024"><strong>Dimension
-    of Posets and Random Graph Orders</strong> @ University of Waterloo
-    <span class="right">1<sup>st</sup> Aug 2024</span></h2>
-    <ul>
-    <li>Presentation of work completed during research term under Jane
-    Gao</li>
-    </ul>
-    <h2
-    id="streams-and-lazy-evaluation-webber-academy-programming-club-notes-13th-oct-2023"><strong>Streams
-    and Lazy Evaluation</strong> @ Webber Academy Programming Club <a
-    href="./presentations/231013-streams/notes.py">[notes]</a> <span
-    class="right">13<sup>th</sup> Oct 2023</span></h2>
-    <ul>
-    <li>An introduction to simulating infinite lists with streams and
-    their manipulation</li>
-    </ul>
-    <h2
-    id="on-the-catalan-numbers-webber-academy-math-society-notes-11th-oct-2023"><strong>On
-    the Catalan Numbers</strong> @ Webber Academy Math Society <a
-    href="./presentations/231011-catalan-numbers/notes.pdf">[notes]</a>
-    <span class="right">11<sup>th</sup> Oct 2023</span></h2>
-    <ul>
-    <li>A derivation of the closed formula for the Catalan Numbers and
-    examples of well known problems where the Catalan Numbers
-    appear</li>
-    </ul>
-    <h2
-    id="high-school-math-competition-lessons-summer-2023"><strong>High
-    School Math Competition Lessons</strong> <span class="right">Summer
-    2023</span></h2>
-    <table style="width:100%;">
-    <colgroup>
-    <col style="width: 33%" />
-    <col style="width: 32%" />
-    <col style="width: 34%" />
-    </colgroup>
-    <tbody>
-    <tr class="odd">
-    <td><a
-    href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[1]</a>
-    divisibilty tricks</td>
-    <td><a
-    href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[2]</a>
-    writing solutions</td>
-    <td><a
-    href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[3]</a>
-    pigeonhole principle</td>
-    </tr>
-    <tr class="even">
-    <td><a
-    href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[4]</a>
-    series and products</td>
-    <td><a
-    href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[5]</a>
-    intro geometry</td>
-    <td><a
-    href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[6]</a>
-    number bases &amp; induction</td>
-    </tr>
-    <tr class="odd">
-    <td><a
-    href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[7]</a>
-    points in a triangle</td>
-    <td><a
-    href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[8]</a>
-    cyclic quadrilaterals</td>
-    <td></td>
-    </tr>
-    </tbody>
-    </table>
-    <h2
-    id="introductory-combinatory-logic-webber-academy-math-society-11th-oct-2022"><strong>Introductory
-    Combinatory Logic</strong> @ Webber Academy Math Society <span
-    class="right">11<sup>th</sup> Oct 2022</span></h2>
-    <ul>
-    <li>Introduction to combinatory logic; showing numbers and
-    operations on numbers can be expressed as combinators</li>
-    </ul>
-    </section>
-    <hr class="lynx" />
-    <footer>
-            <p>Page part of <a href="https://ring.simonwu.dev/">(Simon’s
-Cozyring)</a>: <a
-href="https://ring.simonwu.dev/prev/arnav">(previous)</a> <a
-href="https://ring.simonwu.dev/next/arnav">(next)</a> <a
-href="https://ring.simonwu.dev/random/arnav">(random)</a></p>
-            <p>
-        Contributing to a lightweight web. HTML generated with Pandoc.
-      </p>
-    </footer>
-  </body>
+ <head>
+  <meta charset="utf-8">
+  <title>Arnav Kumar</title>
+  <link rel="stylesheet" href="./assets/style.css">
+ </head>
+ <body>
+  <header>
+   <hgroup><h1>Arnav Kumar</h1></hgroup>
+   <p>
+    <a href="./writings/index.html">[writings]</a>
+    <a href="./projects/index.html">[projects]</a>
+    <a href="./education/index.html">[education]</a>
+    <a href="./presentations/index.html">[presentations]</a>
+   </p>
+   <p>
+    <a href="https://github.com/arnavcs">{Github}</a>
+    <a href="https://arnavcs.itch.io/">{itch.io}</a>
+    <a href="./resume-cv/resume.pdf">[resume]</a>
+    <a href="./resume-cv/cv.pdf">[CV]</a>
+   </p>
+  </header>
+  <main>
+   <h2>Site Introduction</h2>
+   <p>Links are surrounded by brackets. The type of bracket conveys the following:</p>
+   <table>
+    <tr><th rowspan=2 colspan=2 class="invis"></th><th colspan=2>Link Target</th></tr>
+    <tr><th>Internal</th><th>External</th></tr>
+    <tr><th rowspan=2>Content Author</th><th>Me</th><td>[Square]</td><td>{Curly}</td></tr>
+    <tr><th>Other</th><td>-</td><td>(Round)</td></tr>
+   </table>
+  </main>
+  <footer>
+   <p>
+    Page part of <a href="https://ring.simonwu.dev/">(Simon’s Cozyring)</a>: <a href="https://ring.simonwu.dev/prev/arnav">(previous)</a> <a href="https://ring.simonwu.dev/next/arnav">(next)</a> <a href="https://ring.simonwu.dev/random/arnav">(random)</a>
+   </p>
+   <p>
+    Contributing to a lightweight and accessible web.
+   </p>
+  </footer>
+ </body>
 </html>
