added textbooks and projects

--- a/education/index.html
+++ b/education/index.html
@@ -95,13 +95,16 @@
    </table>
    <h2>Academic Self-Learning</h2>
    <p>I am still going through entries ending with &amp;.</p>
-   <h3>Formal Logic &amp; Puzzles</h3>
+   <h3>Operating Systems</h3>
    <ul>
-    <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
+    <li><em>Operating Systems: Three Easy Pieces</em> by Remzi H. Arpaci-Dusseau, Andrea C. Arpaci-Dusseau <a href="https://pages.cs.wisc.edu/~remzi/OSTEP/">(book)</a> &amp;</li>
    </ul>
-   <h3>Programming Theory</h3>
+   <h3>Formal Logic &amp; Programming Theory</h3>
    <ul>
+    <li><em>A Denotational Semantics for the Symmetric Interaction Combinators</em> by Damiano Mazza <a href="https://www.lipn.univ-paris13.fr/~mazza/papers/CombSem-MSCS.pdf">(paper)</a> &amp;</li>
+    <li><em>The Symmetric Interaction Calculus</em> by Victor Maia <a href="https://medium.com/@maiavictor/the-abstract-calculus-fe8c46bcf39c">(tutorial)</a></li>
     <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a href="./concurrency-in-go/notes.pdf">[notes]</a></li>
+    <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača <a href="https://learnyouahaskell.com/">(book)</a></li>
    </ul>
    <h3>Machine Learning, Probability, &amp; Statistics</h3>
@@ -111,8 +114,11 @@
    </ul>
    <h3>Geometry &amp; Graphics</h3>
    <ul>
+    <li><em>Ray Tracing in One Weekend</em> by Peter Shirley, Trevor David Black, Steve Hollasch <a href="https://raytracing.github.io/books/RayTracingInOneWeekend.html">(book)</a> &amp;</li>
+    <li><em>Computer Graphics from Scratch</em> by Gabriel Gambetta <a href="https://www.gabrielgambetta.com/computer-graphics-from-scratch/">(book)</a> &amp;</li>
     <li>University of Utah CS 4600 <a href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a> <a href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a> &amp;</li>
-    <li><em>Geometric Algebra Primer</em> by Jaap Suter <a href="http://www.jaapsuter.com/geometric-algebra/">(source)</a> &amp;</li>
+    <li><em>Geometric Algebra Primer</em> by Jaap Suter <a href="http://www.jaapsuter.com/geometric-algebra/">(lesson)</a> &amp;</li>
+    <li><em>Raycasting Series</em> by Lode Vandevenne <a href="https://lodev.org/cgtutor/index.html">(lesson)</a></li>
    </ul>
   </main>
   <footer>
