--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </header>
   <main>
    <h2>Site Introduction</h2>
+   <p>Check out some of the pages of this site via the links in the header.</p>
    <p>Links are surrounded by brackets. The type of bracket conveys the following:</p>
    <table>
     <tr><th rowspan=2 colspan=2 class="invis"></th><th colspan=2>Link Target</th></tr>
