--- a/projects/index.html
+++ b/projects/index.html
@@ -11,10 +11,19 @@
   <main>
    <h2>Projects</h2>
    <hgroup>
+    <h3>Software Raycaster</h3>
+    <a href="https://arnavcs.github.io/software-raycaster">[web]</a>
+    <a href="https://github.com/arnavcs/software-raycaster">[Github]</a>
+    <span class="right">Sep 2024 - Oct 2024</span>
+   </hgroup>
+   <ul>
+    <li>Implemented a software based raycasting algorithm with vanilla JavaScript where parameters and the scene can be manipulated</li>
+   </ul>
+   <hgroup>
     <h3>Renovating the Labyrinth</h3>
+    <a href="https://arnavcs.github.io/renovating-the-labyrinth">[web]</a>
     <a href="https://arnavcs.itch.io/renovating-the-labyrinth">[itch.io]</a>
     <a href="https://github.com/arnavcs/renovating-the-labyrinth">[Github]</a>
-    <a href="https://arnavcs.github.io/renovating-the-labyrinth">[html]</a>
     <span class="right">Oct 2024</span>
    </hgroup>
    <ul>
@@ -34,7 +43,7 @@
    </ul>
    <hgroup>
     <h3>Interplanetary File Explorer</h3>
-    <a href="https://ipfe.elguindi.xyz/">[try it]</a>
+    <a href="https://ipfe.elguindi.xyz/">[web]</a>
     <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
     <a href="https://devpost.com/software/changeme">[Devpost]</a>
     <span class="right">Jan 2023</span>
