new nier bass tab

--- a/writings/2024-09-09-horse-chestnuts.html
+++ b/writings/2024-09-09-horse-chestnuts.html
@@ -18,7 +18,7 @@
     I remember being very curious in first year what type of tree this was, since the nut shell is especially pointed, and the inside of the nut looked familiar.
    </p>
    <figure>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Illustration_Aesculus_hippocastanum0_clean.jpg/800px-Illustration_Aesculus_hippocastanum0_clean.jpg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Illustration_Aesculus_hippocastanum0_clean.jpg/800px-Illustration_Aesculus_hippocastanum0_clean.jpg" width=50%>
     <figcaption><a href="https://en.wikipedia.org/wiki/Aesculus_hippocastanum">(Horse Chestnuts)</a></figcaption>
    </figure>
    <p>
