--- a/writings/index.html
+++ b/writings/index.html
@@ -10,7 +10,9 @@
   </header>
   <main>
    <p>Here is a list of all tags:
-      &lt;nature&gt;</p>
+      &lt;nature&gt;,
+      &lt;bass tab&gt;</p>
+   <p>Oct 28 2024 <a href="./2024-10-28-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a> &lt;bass tab&gt;</p>
    <p>Sep 09 2024 <a href="./2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a> &lt;nature&gt;</p>
   </main>
   <footer>
