added new media section and new school term

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <hgroup><h1>Arnav Kumar</h1></hgroup>
    <p>
     <a href="./writings/index.html">[writings]</a>
+    <a href="./media/index.html">[media]</a>
     <a href="./projects/index.html">[projects]</a>
     <a href="./education/index.html">[education]</a>
     <a href="./presentations/index.html">[presentations]</a>
