--- a/education/index.html
+++ b/education/index.html
@@ -91,6 +91,16 @@
      <td></td>
      <td></td>
     </tr>
+    <tr>
+     <th>W ’25</th>
+     <td title="COOP 3 - Software Engineer at Trend Micro">COOP 3</td>
+     <td title="PD 6 - Problem Solving">PD 6</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+    </tr>
     </tbody>
    </table>
    <h2>Academic Self-Learning</h2>
@@ -101,8 +111,7 @@
    </ul>
    <h3>Formal Logic &amp; Programming Theory</h3>
    <ul>
-    <li><em>A Denotational Semantics for the Symmetric Interaction Combinators</em> by Damiano Mazza <a href="https://www.lipn.univ-paris13.fr/~mazza/papers/CombSem-MSCS.pdf">(paper)</a> &amp;</li>
-    <li><em>The Symmetric Interaction Calculus</em> by Victor Maia <a href="https://medium.com/@maiavictor/the-abstract-calculus-fe8c46bcf39c">(tutorial)</a></li>
+    <li><em>The Symmetric Interaction Calculus</em> by Victor Maia <a href="https://medium.com/@maiavictor/the-abstract-calculus-fe8c46bcf39c">(article)</a></li>
     <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a href="./concurrency-in-go/notes.pdf">[notes]</a></li>
     <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača <a href="https://learnyouahaskell.com/">(book)</a></li>
