--- a/writings/index.html
+++ b/writings/index.html
@@ -10,10 +10,13 @@
   </header>
   <main>
    <p>Here is a list of all tags:
-      &lt;nature&gt;,
-      &lt;bass tab&gt;</p>
-   <p>Nov 02 2024 <a href="./2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a> &lt;bass tab&gt;</p>
-   <p>Sep 09 2024 <a href="./2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a> &lt;nature&gt;</p>
+      <span class="tag">nature</span>,
+      <span class="tag">bass tab</span>,
+      <span class="tag">game review</span></p>
+   <p>Jan 01 2025 <a href="./2025-01-01-new-years-resolution.html">[My 2025 Resolution]</a></p>
+   <p>Nov 17 2024 <a href="./2024-11-17-paper-lily-chapter-1-review.html">[Paper Lily Chapter 1 Review]</a> <span class="tag">game review</span></p>
+   <p>Nov 02 2024 <a href="./2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a> <span class="tag">bass tab</span></p>
+   <p>Sep 09 2024 <a href="./2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a> <span class="tag">nature</span></p>
   </main>
   <footer>
    <p>
