added hedgehog in the fog and fixed tags

--- a/media/index.html
+++ b/media/index.html
@@ -10,9 +10,14 @@
   </header>
   <main>
    <p>The stars indicate my percieved utility of the consumed media, I highly recommend titles which are rated 5 stars.</p>
+   <p>The tags are organized as follows.
+     Media form: <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;film&gt;</span>.
+     Primary language: <span class="tag">&lt;en&gt;</span>, <span class="tag">&lt;es&gt;</span>, <span class="tag">&lt;ru&gt;</span>.</p>
+   <br/>
    <ul>
-    <li>Jan 21 2025 <em>the life-changing magic of tidying up - the Japanese art of decluttering and organizing</em> by Marie Kondo <span class="tag">book</span> <span class="tag">en</span> <span class="right">****</span></li>
-    <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">book</span> <span class="tag">en</span> <span class="right">*****</span></li>
+    <li>Jan 25 2025 <em>Ёжик в тумане</em> by Yuri Norstein and Soyuzmultfilm <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">****</span></li>
+    <li>Jan 21 2025 <em>the life-changing magic of tidying up - the Japanese art of decluttering and organizing</em> by Marie Kondo <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+    <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
    </ul>
   </main>
   <footer>
