--- a/writings/index.html
+++ b/writings/index.html
@@ -10,13 +10,16 @@
   </header>
   <main>
    <p>Here is a list of all tags:
-      <span class="tag">nature</span>,
-      <span class="tag">bass tab</span>,
-      <span class="tag">game review</span></p>
-   <p>Jan 01 2025 <a href="./2025-01-01-new-years-resolution.html">[My 2025 Resolution]</a></p>
-   <p>Nov 17 2024 <a href="./2024-11-17-paper-lily-chapter-1-review.html">[Paper Lily Chapter 1 Review]</a> <span class="tag">game review</span></p>
-   <p>Nov 02 2024 <a href="./2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a> <span class="tag">bass tab</span></p>
-   <p>Sep 09 2024 <a href="./2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a> <span class="tag">nature</span></p>
+      <span class="tag">&lt;nature&gt;</span>,
+      <span class="tag">&lt;bass tab&gt;</span>,
+      <span class="tag">&lt;game review&gt;</span></p>
+   <br/>
+   <ul>
+    <li>Jan 01 2025 <a href="./2025-01-01-new-years-resolution.html">[My 2025 Resolution]</a></li>
+    <li>Nov 17 2024 <a href="./2024-11-17-paper-lily-chapter-1-review.html">[Paper Lily Chapter 1 Review]</a> <span class="tag">&lt;game review&gt;</span></li>
+    <li>Nov 02 2024 <a href="./2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a> <span class="tag">&lt;bass tab&gt;</span></li>
+    <li>Sep 09 2024 <a href="./2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a> <span class="tag">&lt;nature&gt;</span></li>
+   </ul>
   </main>
   <footer>
    <p>
