--- a/writings/index.html
+++ b/writings/index.html
@@ -14,7 +14,7 @@
       <span class="tag">&lt;bass tab&gt;</span>,
       <span class="tag">&lt;game review&gt;</span></p>
    <br/>
-   <ul>
+   <ul class="blank">
     <li>Jan 01 2025 <a href="./2025-01-01-new-years-resolution.html">[My 2025 Resolution]</a></li>
     <li>Nov 17 2024 <a href="./2024-11-17-paper-lily-chapter-1-review.html">[Paper Lily Chapter 1 Review]</a> <span class="tag">&lt;game review&gt;</span></li>
     <li>Nov 02 2024 <a href="./2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a> <span class="tag">&lt;bass tab&gt;</span></li>
