--- a/media/index.html
+++ b/media/index.html
@@ -10,12 +10,20 @@
   </header>
   <main>
    <p>The stars indicate my percieved utility of the consumed media, I highly recommend titles which are rated 5 stars.</p>
-   <p>The tags are organized as follows.
-     Media form: <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;film&gt;</span>.
-     Primary language: <span class="tag">&lt;en&gt;</span>, <span class="tag">&lt;es&gt;</span>, <span class="tag">&lt;ru&gt;</span>.</p>
+   <p>
+    The tags are organized as follows.
+    <ul>
+     <li>Media form: <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;manga&gt;</span>, <span class="tag">&lt;poem&gt;</span>, <span class="tag">&lt;film&gt;</span>, <span class="tag">&lt;serial&gt;</span>, <span class="tag">&lt;performance&gt;</span>.</li>
+     <li>Language of Content: <span class="tag">&lt;en&gt;</span>, <span class="tag">&lt;es&gt;</span>, <span class="tag">&lt;ru&gt;</span>.</li>
+    </ul>
+   </p>
    <br/>
-   <ul>
-    <li>Jan 25 2025 <em>Ёжик в тумане</em> by Yuri Norstein and Soyuzmultfilm <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">****</span></li>
+   <ul class="blank">
+    <li>Feb 15 2025 <em>Ночь, улится, фонар, аптека</em> by Александр Блок <span class="tag">&lt;poem&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+    <li>Feb 12 2025 <em>Сама Дура</em> <span class="tag">&lt;serial&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+    <li>Feb 03 2025 <em>Insomniacs after School</em> by Makoto Ojiro <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">**</span></li>
+    <li>Feb 01 2025 <em>Giselle</em> by the National Ballet of Canada <span class="tag">&lt;performance&gt;</span> <span class="right">***</span></li>
+    <li>Jan 25 2025 <em>Ёжик в тумане</em> by Yuri Norstein and Soyuzmultfilm <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
     <li>Jan 21 2025 <em>the life-changing magic of tidying up - the Japanese art of decluttering and organizing</em> by Marie Kondo <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
     <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
    </ul>
