finished feb book

--- a/media/index.html
+++ b/media/index.html
@@ -19,6 +19,7 @@
    </p>
    <br/>
    <ul class="blank">
+    <li>Feb 23 2025 <em>La Receta de la Felicidad</em> by Deepak Chopra <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;es&gt;</span> <span class="right">****</span></li>
     <li>Feb 15 2025 <em>Ночь, улится, фонар, аптека</em> by Александр Блок <span class="tag">&lt;poem&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
     <li>Feb 12 2025 <em>Сама Дура</em> <span class="tag">&lt;serial&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
     <li>Feb 03 2025 <em>Insomniacs after School</em> by Makoto Ojiro <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">**</span></li>
