--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
    <p>
     <a href="./writings/index.html">[writings]</a>
     <a href="./media/index.html">[media]</a>
-    <a href="./projects/index.html">[projects]</a>
-    <a href="./education/index.html">[education]</a>
-    <a href="./presentations/index.html">[presentations]</a>
    </p>
    <p>
     <a href="https://github.com/arnavcs">{Github}</a>
@@ -31,6 +28,241 @@
     <tr><th rowspan=2>Content Author</th><th>Me</th><td>[Square]</td><td>{Curly}</td></tr>
     <tr><th>Other</th><td>-</td><td>(Round)</td></tr>
    </table>
+  </main>
+  <main>
+   <h2>Projects</h2>
+   <hgroup>
+    <h3>Software Raycaster</h3>
+    <a href="https://arnavcs.github.io/software-raycaster">[web]</a>
+    <a href="https://github.com/arnavcs/software-raycaster">[Github]</a>
+    <span class="right">Sep 2024 - Oct 2024</span>
+   </hgroup>
+   <ul>
+    <li>Implemented a software based raycasting algorithm with vanilla JavaScript where parameters and the scene can be manipulated</li>
+   </ul>
+   <hgroup>
+    <h3>Renovating the Labyrinth</h3>
+    <a href="https://arnavcs.github.io/renovating-the-labyrinth">[web]</a>
+    <a href="https://arnavcs.itch.io/renovating-the-labyrinth">[itch.io]</a>
+    <a href="https://github.com/arnavcs/renovating-the-labyrinth">[Github]</a>
+    <span class="right">Oct 2024</span>
+   </hgroup>
+   <ul>
+    <li>Solo submission made in 72 hours with vanilla JavaScript on an HTML canvas for the UW Game Dev Club's fall 2024 game jam; voted winner of the technical achievement award</li>
+    <li>Built a real time optimized ray caster with ordered Bayer matrix dithering</li>
+    <li>Programmed 2D rigid body collision behaviour and a randomized Prim's algorithm for map generation</li>
+   </ul>
+   <hgroup>
+    <h3>Bloom</h3>
+    <a href="https://kdxiao.itch.io/bloom">[itch.io]</a>
+    <a href="https://github.com/kdxiao/bloom">[Github]</a>
+    <span class="right">May 2024 - Jun 2024</span>
+   </hgroup>
+   <ul>
+    <li>Team submission made in 72 hours with Godot for the UW Game Dev Club's spring 2024 game jam</li>
+    <li>Implemented colour mixing, screen wrapping, movement, and flower spawning mechanics</li>
+   </ul>
+   <hgroup>
+    <h3>Interplanetary File Explorer</h3>
+    <a href="https://ipfe.elguindi.xyz/">[web]</a>
+    <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
+    <a href="https://devpost.com/software/changeme">[Devpost]</a>
+    <span class="right">Jan 2023</span>
+   </hgroup>
+   <ul>
+    <li>Visual file explorer of an IPFS written in Golang, Python, and JavaScript for the 2023 UofTHacks X hackathon; winner of the Estuary sponsor prize</li>
+    <li>Created vector embeddings for files in the Estuary IPFS using Co:here’s NLP embeddings on file headers</li>
+    <li>Performed principal component analysis of the vector embeddings to reduce dimensionality and be displayed interactively in 3D space with Three.js</li>
+   </ul>
+   <hgroup>
+    <h3>Prognosing IPF</h3>
+    <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a>
+    <span class="right">Dec 2020 - Jun 2021</span>
+   </hgroup>
+   <ul>
+    <li>Several machine learning models written to predict the deterioration of the condition of the lungs over time for patients of Idiopathic Pulmonary Fibrosis (IPF) and give a level of confidence in the prediction</li>
+    <li>Implemented an auto-encoder, linear regression, dense neural network, and bayesian model in order to accurately predict future lung capacity and give a confidence value using initial lung capacity data, age, sex, smoking status, and more</li>
+    <li>Obtained a Laplace Log Likelihood score of −6.9 (much better than the baseline −8.1) with σ ≈ 200mL</li>
+   </ul>
+  </main>
+  <main>
+   <h2>Presentations</h2>
+   <hgroup>
+    <h3>Dimension of Posets and Random Graph Orders</h3> @ University of Waterloo
+    <span class="right">1<sup>st</sup> Aug 2024</span>
+   </hgroup>
+   <ul>
+    <li>Presentation of work completed during research term under Jane Gao</li>
+   </ul>
+   <hgroup>
+    <h3>Streams and Lazy Evaluation</h3> @ Webber Academy Programming Club
+    <a href="./presentations/231013-streams/notes.py">[notes]</a>
+    <span class="right">13<sup>th</sup> Oct 2023</span>
+   </hgroup>
+   <ul>
+    <li>An introduction to simulating infinite lists with streams and their manipulation</li>
+   </ul>
+   <hgroup>
+    <h3>On the Catalan Numbers</h3> @ Webber Academy Math Society
+    <a href="./presentations/231011-catalan-numbers/notes.pdf">[notes]</a>
+    <span class="right">11<sup>th</sup> Oct 2023</span>
+   </hgroup>
+   <ul>
+    <li>A derivation of the closed formula for the Catalan Numbers and examples of well known problems where the Catalan Numbers appear</li>
+   </ul>
+   <hgroup>
+    <h3>Introductory Combinatory Logic</h3> @ Webber Academy Math Society
+    <span class="right">11<sup>th</sup> Oct 2022</span>
+   </hgroup>
+   <ul>
+    <li>Introduction to combinatory logic; showing numbers and operations on numbers can be expressed as combinators</li>
+   </ul>
+   <h2>Lectures & Lessons</h2>
+   <hgroup>
+    <h3>High School Math Competition Lessons</h3>
+    <span class="right">Summer 2023</span>
+   </hgroup>
+   <table>
+    <tbody>
+     <tr>
+      <td><a href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[1]</a> divisibilty tricks</td>
+      <td><a href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[2]</a> writing solutions</td>
+      <td><a href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[3]</a> pigeonhole principle</td>
+     </tr>
+     <tr>
+      <td><a href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[4]</a> series and products</td>
+      <td><a href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[5]</a> intro geometry</td>
+      <td><a href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[6]</a> number bases &amp; induction</td>
+     </tr>
+     <tr>
+      <td><a href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[7]</a> points in a triangle</td>
+      <td><a href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[8]</a> cyclic quadrilaterals</td>
+      <td class="invis"></td>
+     </tr>
+    </tbody>
+   </table>
+  </main>
+  <main>
+   <h2>Formal Education</h2>
+   <hgroup>
+    <h3>Waterloo Undergraduate Degree</h3>: Bachelors of Computer Science
+   </hgroup>
+   <table>
+    <thead>
+     <tr>
+      <th>Term</th>
+      <th colspan="7">Courses</th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr class="odd">
+      <th>F ’22</th>
+      <td title="MATH 145 - Algebra (Advanced Level)">MATH 145</td>
+      <td title="MATH 147 - Calculus 1 (Advanced Level)">MATH 147</td>
+      <td title="CS 145 - Designing Functional Programs (Advanced Level)">CS 145</td>
+      <td title="ENGL 109 - Introduction to Academic Writing">ENGL 109</td>
+      <td title="PHYS 121 - Mechanics">PHYS 121</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+     <th>W ’23</th>
+     <td title="MATH 146 - Linear Algebra 1 (Advanced Level)">MATH 146</td>
+     <td title="MATH 148 - Calculus 2 (Advanced Level)">MATH 148</td>
+     <td title="CS 146 - Elementary Algorithm Design and Data Abstraction (Advanced Level)">CS 146</td>
+     <td title="CS 136L - Tools and Techniques for Software Development">CS 136L</td>
+     <td title="ENGL 108B - Global English Literatures">ENGL 108B</td>
+     <td title="PHYS 122 - Waves, Electricity and Magnetism">PHYS 122</td>
+     <td title="PD 1 - Career Fundamentals">PD 1</td>
+    </tr>
+    <tr>
+     <th>S ’23</th>
+     <td title="COOP 1 - Blockchain Software Engineer at Dandelion Networks">COOP 1</td>
+     <td title="PD 11 - Processes for Technical Report Writing">PD 11</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+    </tr>
+    <tr>
+     <th>F ’23</th>
+     <td title="MATH 245 - Linear Algebra 2 (Advanced Level)">MATH 245</td>
+     <td title="MATH 247 - Calculus 3 (Advanced Level)">MATH 247</td>
+     <td title="STAT 240 - Probability (Advanced Level)">STAT 240</td>
+     <td title="CS 245E - Logic and Computation (Enriched)">CS 245E</td>
+     <td title="CS 246E - Object-Oriented Software Development (Enriched)">CS 246E</td>
+     <td></td>
+     <td></td>
+    </tr>
+    <tr>
+     <th>W ’24</th>
+     <td title="MATH 249 - Introduction to Combinatorics (Advanced Level)">MATH 249</td>
+     <td title="STAT 241 - Statistics (Advanced Level)">STAT 241</td>
+     <td title="CO 255 - Introduction to Optimization (Advanced Level)">CO 255</td>
+     <td title="CS 240 - Data Structures and Data Management">CS 240</td>
+     <td title="CS 241 - Foundations of Sequential Programs">CS 241</td>
+     <td></td>
+     <td></td>
+    </tr>
+    <tr>
+     <th>S ’24</th>
+     <td title="COOP 2 - Research Assistantship under Professor Jane Gao">COOP 2</td>
+     <td title="PD 10 - Professional Responsibility in Computing">PD 10</td>
+     <td title="CS 251 - Computer Organization and Design">CS 251</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+    </tr>
+    <tr>
+     <th>F ’24</th>
+     <td title="CS 350 - Operating Systems">CS 350</td>
+     <td title="CS 341 - Algorithms">CS 341</td>
+     <td title="CS 370 - Numerical Computation">CS 370</td>
+     <td title="PHYS 256 - Geometrical and Physical Optics">PHYS 256</td>
+     <td title="FINE 100 - Studio Fundamentals">FINE 100</td>
+     <td></td>
+     <td></td>
+    </tr>
+    <tr>
+     <th>W ’25</th>
+     <td title="COOP 3 - Software Engineer at Trend Micro">COOP 3</td>
+     <td title="PD 6 - Problem Solving">PD 6</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+    </tr>
+    </tbody>
+   </table>
+   <h2>Academic Self-Learning</h2>
+   <p>I am still going through entries ending with &amp;.</p>
+   <h3>Operating Systems</h3>
+   <ul>
+    <li><em>Operating Systems: Three Easy Pieces</em> by Remzi H. Arpaci-Dusseau, Andrea C. Arpaci-Dusseau <a href="https://pages.cs.wisc.edu/~remzi/OSTEP/">(book)</a> &amp;</li>
+   </ul>
+   <h3>Formal Logic &amp; Programming Theory</h3>
+   <ul>
+    <li><em>The Symmetric Interaction Calculus</em> by Victor Maia <a href="https://medium.com/@maiavictor/the-abstract-calculus-fe8c46bcf39c">(article)</a></li>
+    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a href="./concurrency-in-go/notes.pdf">[notes]</a></li>
+    <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
+    <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača <a href="https://learnyouahaskell.com/">(book)</a></li>
+   </ul>
+   <h3>Machine Learning, Probability, &amp; Statistics</h3>
+   <ul>
+    <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
+    <li><em>A Course in Machine Learning</em> by Hal Daumé III <a href="http://ciml.info/">(book)</a> &amp;</li>
+   </ul>
+   <h3>Geometry &amp; Graphics</h3>
+   <ul>
+    <li><em>Ray Tracing in One Weekend</em> by Peter Shirley, Trevor David Black, Steve Hollasch <a href="https://raytracing.github.io/books/RayTracingInOneWeekend.html">(book)</a> &amp;</li>
+    <li><em>Computer Graphics from Scratch</em> by Gabriel Gambetta <a href="https://www.gabrielgambetta.com/computer-graphics-from-scratch/">(book)</a> &amp;</li>
+    <li>University of Utah CS 4600 <a href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a> <a href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a> &amp;</li>
+    <li><em>Geometric Algebra Primer</em> by Jaap Suter <a href="http://www.jaapsuter.com/geometric-algebra/">(lesson)</a> &amp;</li>
+    <li><em>Raycasting Series</em> by Lode Vandevenne <a href="https://lodev.org/cgtutor/index.html">(lesson)</a></li>
+   </ul>
   </main>
   <footer>
    <p>
