added articles back and added a couple

--- a/index.html
+++ b/index.html
@@ -26,9 +26,32 @@
    </table>
   </main>
   <main>
+   <h2>Articles</h2>
+   <ul class="blank">
+    <li>Jul 02 2025 <a href="./writings/2025-07-02-how-to-walk.html">[How to Walk]</a></li>
+    <li>Jun 30 2025 <a href="./writings/2025-06-30-learning-humanity-from-ants.html">[Learning Humanity from Ants]</a></li>
+    <li>May 07 2025 <a href="./writings/2025-05-07-the-sacred-marigold.html">[The Sacred Marigold]</a></li>
+    <li>Jan 01 2025 <a href="./writings/2025-01-01-new-years-resolution.html">[My 2025 Resolution]</a></li>
+    <li>Nov 17 2024 <a href="./writings/2024-11-17-paper-lily-chapter-1-review.html">[Paper Lily Chapter 1 Review]</a></li>
+    <li>Nov 02 2024 <a href="./writings/2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a></li>
+    <li>Sep 09 2024 <a href="./writings/2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a></li>
+   </ul>
+  </main>
+  <main>
+   <h2>Publications</h2>
+   <hgroup>
+    <h3>The Dimension of Sparse Random Graph Orders</h3>
+    <a href="https://youtu.be/7kGkBQDHszU">(presentation)</a>
+    <a href="https://arxiv.org/abs/2504.19029">[arXiv preprint]</a>
+    <span class="right">May 2024 - Aug 2024</span>
+   </hgroup>
+   <ul>
+    <li>Coauthored paper during undergraduate research assistantship under professor Jane Gao</li>
+   </ul>
    <h2>Projects</h2>
    <hgroup>
     <h3>Software Raycaster</h3>
+    | JavaScript
     <a href="https://arnavcs.github.io/software-raycaster">[web]</a>
     <a href="https://github.com/arnavcs/software-raycaster">[Github]</a>
     <span class="right">Sep 2024 - Oct 2024</span>
@@ -38,6 +61,7 @@
    </ul>
    <hgroup>
     <h3>Renovating the Labyrinth</h3>
+    | JavaScript
     <a href="https://arnavcs.github.io/renovating-the-labyrinth">[web]</a>
     <a href="https://arnavcs.itch.io/renovating-the-labyrinth">[itch.io]</a>
     <a href="https://github.com/arnavcs/renovating-the-labyrinth">[Github]</a>
@@ -50,6 +74,7 @@
    </ul>
    <hgroup>
     <h3>Bloom</h3>
+    | Godot
     <a href="https://kdxiao.itch.io/bloom">[itch.io]</a>
     <a href="https://github.com/kdxiao/bloom">[Github]</a>
     <span class="right">May 2024 - Jun 2024</span>
@@ -60,6 +85,7 @@
    </ul>
    <hgroup>
     <h3>Interplanetary File Explorer</h3>
+    | Go, Python, JavaScript
     <a href="https://ipfe.elguindi.xyz/">[web]</a>
     <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
     <a href="https://devpost.com/software/changeme">[Devpost]</a>
@@ -72,6 +98,7 @@
    </ul>
    <hgroup>
     <h3>Prognosing IPF</h3>
+    | Python
     <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a>
     <span class="right">Dec 2020 - Jun 2021</span>
    </hgroup>
@@ -231,33 +258,66 @@
      <td></td>
      <td></td>
     </tr>
+    <tr>
+     <th>S ’25</th>
+     <td title="CS 475/675 - Computational Linear Algebra">CS 475</td>
+     <td title="CS 480/680 - Introduction to Machine Learning">CS 480</td>
+     <td title="CS 488/688 - Introduction to Computer Graphics">CS 488</td>
+     <td></td>
+     <td></td>
+     <td></td>
+     <td></td>
+    </tr>
     </tbody>
    </table>
    <h2>Academic Self-Learning</h2>
    <p>I am still going through entries ending with &amp;.</p>
    <h3>Operating Systems</h3>
    <ul>
-    <li><em>Operating Systems: Three Easy Pieces</em> by Remzi H. Arpaci-Dusseau, Andrea C. Arpaci-Dusseau <a href="https://pages.cs.wisc.edu/~remzi/OSTEP/">(book)</a> &amp;</li>
+    <li><em>Operating Systems: Three Easy Pieces</em> by Remzi H. Arpaci-Dusseau, Andrea C. Arpaci-Dusseau <a href="https://pages.cs.wisc.edu/~remzi/OSTEP/">(book)</a></li>
    </ul>
    <h3>Formal Logic &amp; Programming Theory</h3>
    <ul>
     <li><em>The Symmetric Interaction Calculus</em> by Victor Maia <a href="https://medium.com/@maiavictor/the-abstract-calculus-fe8c46bcf39c">(article)</a></li>
-    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a href="./concurrency-in-go/notes.pdf">[notes]</a></li>
+    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a href="./education/concurrency-in-go/notes.pdf">[notes]</a></li>
     <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača <a href="https://learnyouahaskell.com/">(book)</a></li>
    </ul>
    <h3>Machine Learning, Probability, &amp; Statistics</h3>
    <ul>
     <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
-    <li><em>A Course in Machine Learning</em> by Hal Daumé III <a href="http://ciml.info/">(book)</a> &amp;</li>
    </ul>
    <h3>Geometry &amp; Graphics</h3>
    <ul>
-    <li><em>Ray Tracing in One Weekend</em> by Peter Shirley, Trevor David Black, Steve Hollasch <a href="https://raytracing.github.io/books/RayTracingInOneWeekend.html">(book)</a> &amp;</li>
-    <li><em>Computer Graphics from Scratch</em> by Gabriel Gambetta <a href="https://www.gabrielgambetta.com/computer-graphics-from-scratch/">(book)</a> &amp;</li>
-    <li>University of Utah CS 4600 <a href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a> <a href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a> &amp;</li>
-    <li><em>Geometric Algebra Primer</em> by Jaap Suter <a href="http://www.jaapsuter.com/geometric-algebra/">(lesson)</a> &amp;</li>
+    <li><em>Projective Geometric Algebra Illuminated</em> by Eric Lengyel <a href="https://projectivegeometricalgebra.org/">(website)</a> &amp;</li>
+    <li><em>Ray Tracing in One Weekend</em> by Peter Shirley, Trevor David Black, Steve Hollasch <a href="https://raytracing.github.io/books/RayTracingInOneWeekend.html">(book)</a></li>
+    <li><em>Computer Graphics from Scratch</em> by Gabriel Gambetta <a href="https://www.gabrielgambetta.com/computer-graphics-from-scratch/">(book)</a></li>
+    <li>University of Utah CS 4600 <a href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a> <a href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a></li>
     <li><em>Raycasting Series</em> by Lode Vandevenne <a href="https://lodev.org/cgtutor/index.html">(lesson)</a></li>
+   </ul>
+  </main>
+  <main>
+   <h2>Consumed Media</h2>
+   <p>
+    Stars indicate my rating and tags are organized as follows.
+    <ul>
+     <li>Media form: <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;manga&gt;</span>, <span class="tag">&lt;poem&gt;</span>, <span class="tag">&lt;film&gt;</span>, <span class="tag">&lt;serial&gt;</span>, <span class="tag">&lt;performance&gt;</span>, <span class="tag">&lt;anime&gt;</span>, <span class="tag">&lt;animation&gt;</span>.</li>
+     <li>Language of Content: <span class="tag">&lt;en&gt;</span>, <span class="tag">&lt;es&gt;</span>, <span class="tag">&lt;ru&gt;</span>.</li>
+    </ul>
+   </p>
+   <br/>
+   <ul class="blank">
+    <li>Jun 29 2025 <em>Echoes</em> by Koji Narita <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+    <li>Jun 28 2025 <em>The Amaxing Digital Circus Episode 5</em> by Glitch <a href="">(episode)</a> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+    <li>Jun 28 2025 <em>Hunter×Hunter 2011</em> by Madhouse Studios <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+    <li>Feb 23 2025 <em>La Receta de la Felicidad</em> by Deepak Chopra <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;es&gt;</span> <span class="right">****</span></li>
+    <li>Feb 15 2025 <em>Ночь, улится, фонар, аптека</em> by Александр Блок <span class="tag">&lt;poem&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+    <li>Feb 12 2025 <em>Сама Дура</em> <span class="tag">&lt;serial&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+    <li>Feb 03 2025 <em>Insomniacs after School</em> by Makoto Ojiro <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">**</span></li>
+    <li>Feb 01 2025 <em>Giselle</em> by the National Ballet of Canada <span class="tag">&lt;performance&gt;</span> <span class="right">***</span></li>
+    <li>Jan 25 2025 <em>Ёжик в тумане</em> by Yuri Norstein and Soyuzmultfilm <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+    <li>Jan 21 2025 <em>the life-changing magic of tidying up - the Japanese art of decluttering and organizing</em> by Marie Kondo <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+    <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
    </ul>
   </main>
   <footer>
