--- a/writings/2024-09-09-horse-chestnuts.html
+++ b/writings/2024-09-09-horse-chestnuts.html
@@ -6,7 +6,7 @@
  </head>
  <body>
   <header>
-   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <a href="./index.html">[Writings]</a> / <h1>Horse Chestnuts</h1></hgroup>
+   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <h1>Horse Chestnuts</h1></hgroup>
    <p>Sep 09 2024</p>
   </header>
   <main>
@@ -31,7 +31,7 @@
   </main>
   <footer>
    <p>
-    Contributing via static HTML to a lightweight and accessible web.
+    Contributing to a lightweight and accessible web.
    </p>
   </footer>
  </body>
