--- a/writings/2024-11-02-nier-automata-city-ruins-tab.html
+++ b/writings/2024-11-02-nier-automata-city-ruins-tab.html
@@ -6,7 +6,7 @@
  </head>
  <body>
   <header>
-   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <a href="./index.html">[Writings]</a> / <h1>Nier Automata City Ruins Bass Tab</h1></hgroup>
+   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <h1>Nier Automata City Ruins Bass Tab</h1></hgroup>
    <p>Nov 02 2024</p>
   </header>
   <main>
@@ -100,7 +100,7 @@ F|--1----------------|--6----------------|-11----------------|------------------
   </main>
   <footer>
    <p>
-    Contributing via static HTML to a lightweight and accessible web.
+    Contributing to a lightweight and accessible web.
    </p>
   </footer>
  </body>
