--- a/writings/2024-11-17-paper-lily-chapter-1-review.html
+++ b/writings/2024-11-17-paper-lily-chapter-1-review.html
@@ -6,7 +6,7 @@
  </head>
  <body>
   <header>
-   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <a href="./index.html">[Writings]</a> / <h1>Paper Lily Chapter 1 Review</h1></hgroup>
+   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <h1>Paper Lily Chapter 1 Review</h1></hgroup>
    <p>Nov 17 2024</p>
   </header>
   <main>
@@ -45,7 +45,7 @@
   </main>
   <footer>
    <p>
-    Contributing via static HTML to a lightweight and accessible web.
+    Contributing to a lightweight and accessible web.
    </p>
   </footer>
  </body>
