--- a/writings/2025-01-01-new-years-resolution.html
+++ b/writings/2025-01-01-new-years-resolution.html
@@ -6,7 +6,7 @@
  </head>
  <body>
   <header>
-   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <a href="./index.html">[Writings]</a> / <h1>My 2025 Resolution</h1></hgroup>
+   <hgroup><a href="../index.html">[Arnav Kumar]</a> / <h1>My 2025 Resolution</h1></hgroup>
    <p>Jan 01 2025</p>
   </header>
   <main>
@@ -21,7 +21,7 @@
   </main>
   <footer>
    <p>
-    Contributing via static HTML to a lightweight and accessible web.
+    Contributing to a lightweight and accessible web.
    </p>
   </footer>
  </body>
