--- a/writings/2025-07-02-how-to-walk.html
+++ b/writings/2025-07-02-how-to-walk.html
@@ -48,7 +48,7 @@
    <p>
     Ultimately, I think that it important to have a sense of consciousness about the way you are walking while you wear shoes (and while you don't) and to maintain a flexible body so that you may walk more effortlessly.
     I've been tyring to take more care of the way I walk myself, and I think that the repercussions of how you walk has much more to do with your wellbeing than simply foot cramps.
-    After all, entire systems of wellbeing like acupuressure are based upon putting pressure and massaging different parts of the feet to affect the organs of the whole body.
+    After all, entire systems of wellbeing like acupressure are based upon putting pressure and massaging different parts of the feet to affect the organs of the whole body.
    </p>
   </main>
   <footer>
