--- a/writings/2025-06-30-learning-humanity-from-ants.html
+++ b/writings/2025-06-30-learning-humanity-from-ants.html
@@ -90,7 +90,7 @@
     But if we understand the importance of living humbly, and taking care of those who are weaker, then maybe we can be a little bit more "human".
    </p>
    <figure>
-    <img src="https://static.wikia.nocookie.net/shipping/images/5/57/Oumugi_injured.png/revision/latest?cb=20220401175022" width=50%>
+    <img src="./2025-06-30-learning-humanity-from-ants-figure-1.png" width=50%>
     <figcaption><a href="https://shipping.fandom.com/wiki/OuMugi/Gallery?file=Oumugi_injured.png">(Meruem's grief at Komugi's injury)</a></figcaption>
    </figure>
    <p>
